--- a/arabparaforum/index.html
+++ b/arabparaforum/index.html
@@ -5,130 +5,159 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مجتمع الأبطال - Paralympic Forum</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap" rel="stylesheet">
     <style>
-        /* --- DYNAMIC THEME --- */
+        /* --- MODERN THEME VARIABLES --- */
         :root {
             --primary-color: #0056b3;
-            --primary-hover: #004494;
+            --primary-gradient: linear-gradient(135deg, var(--primary-color), #003d80);
+            --bg-color: #f4f6f8;
+            --card-bg: #ffffff;
+            --text-main: #1c1e21;
+            --text-muted: #65676b;
+            --shadow-sm: 0 2px 8px rgba(0, 0, 0, 0.04);
+            --shadow-md: 0 8px 24px rgba(0, 0, 0, 0.08);
+            --radius-main: 16px;
         }
 
-        /* --- CORE STYLES --- */
+        /* --- RESET & BASE --- */
         * {
             box-sizing: border-box;
             margin: 0;
             padding: 0;
+            outline: none;
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f0f2f5;
-            color: #1c1e21;
-            line-height: 1.6;
+            font-family: 'Cairo', 'Segoe UI', sans-serif;
+            background: var(--bg-color);
+            color: var(--text-main);
+            line-height: 1.7;
             min-height: 100vh;
         }
 
         .app-container {
-            max-width: 700px;
+            max-width: 720px;
             margin: 0 auto;
-            padding: 20px;
+            padding: 30px 20px;
         }
 
-        /* --- HEADER (Dynamic) --- */
+        /* --- HEADER & BRANDING --- */
         header {
             text-align: center;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
             padding-top: 20px;
-            position: relative;
+            animation: slideDown 0.6s ease;
+        }
+
+        @keyframes slideDown {
+            from {
+                transform: translateY(-20px);
+                opacity: 0;
+            }
+
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
         }
 
         .logo-img {
-            max-height: 200px;
+            max-height: 220px;
             width: auto;
-            transition: transform 0.3s;
+            transition: transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             cursor: pointer;
+            filter: drop-shadow(0 10px 15px rgba(0, 0, 0, 0.1));
         }
 
         .logo-img:hover {
-            transform: scale(1.02);
+            transform: scale(1.05) rotate(1deg);
         }
 
         .site-title-text {
-            font-family: 'Noto Kufi Arabic', sans-serif;
-            font-size: 40px;
+            font-family: 'Cairo', sans-serif;
+            font-size: 42px;
             font-weight: 900;
             color: var(--primary-color);
             line-height: 1.2;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
         }
 
-        /* --- ADMIN BUTTON (Floating) --- */
+        /* --- FLOATING ADMIN BTN --- */
         .admin-settings-btn {
             position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 99999;
+            top: 25px;
+            left: 25px;
+            z-index: 999;
             background: #ff9800;
-            color: #000;
+            color: white;
             border: none;
-            padding: 12px 20px;
-            border-radius: 30px;
+            padding: 10px 20px;
+            border-radius: 50px;
             cursor: pointer;
             font-size: 14px;
-            font-weight: bold;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            font-weight: 700;
+            box-shadow: 0 4px 15px rgba(255, 152, 0, 0.3);
             display: flex;
             align-items: center;
             gap: 8px;
-            transition: transform 0.2s;
+            transition: all 0.3s ease;
         }
 
         .admin-settings-btn:hover {
-            transform: scale(1.1);
-            background: #ffa726;
-            opacity: 1;
+            transform: translateY(-3px);
+            box-shadow: 0 8px 25px rgba(255, 152, 0, 0.4);
         }
 
-        /* --- AUTH BAR --- */
+        /* --- AUTH CARD (User Bar) --- */
         .auth-bar {
-            background: white;
-            padding: 15px 20px;
-            border-radius: 12px;
-            margin-bottom: 25px;
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(10px);
+            padding: 18px 25px;
+            border-radius: var(--radius-main);
+            margin-bottom: 30px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-            border-top: 4px solid var(--primary-color);
+            box-shadow: var(--shadow-md);
+            border-top: 5px solid var(--primary-color);
+            transition: transform 0.2s;
+        }
+
+        .auth-bar:hover {
+            transform: translateY(-2px);
         }
 
         .app-title {
-            font-size: 18px;
-            font-weight: 700;
+            font-size: 20px;
+            font-weight: 800;
             color: #333;
-            margin: 0;
         }
 
         .app-subtitle {
             font-size: 13px;
-            color: #666;
-            margin: 0;
+            color: var(--text-muted);
+            font-weight: 600;
         }
 
         .user-area {
             display: flex;
             align-items: center;
-            gap: 10px;
+            gap: 12px;
         }
 
         .avatar {
-            width: 36px;
-            height: 36px;
+            width: 42px;
+            height: 42px;
             border-radius: 50%;
-            border: 2px solid #eee;
+            border: 3px solid white;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            object-fit: cover;
         }
 
         .username {
-            font-weight: 600;
-            font-size: 14px;
+            font-weight: 700;
+            font-size: 15px;
         }
 
         /* --- BUTTONS --- */
@@ -136,127 +165,139 @@
             cursor: pointer;
             border: none;
             font-family: inherit;
-            transition: 0.2s;
+            transition: all 0.2s ease;
         }
 
         .btn-login {
-            background: var(--primary-color);
+            background: var(--primary-gradient);
             color: white;
-            padding: 8px 16px;
-            border-radius: 20px;
-            font-weight: bold;
+            padding: 10px 24px;
+            border-radius: 50px;
+            font-weight: 700;
+            font-size: 14px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
             display: flex;
             align-items: center;
-            gap: 5px;
-        }
-
-        .btn-login:hover {
-            opacity: 0.9;
-        }
-
-        /* SOCIAL BUTTONS */
-        .login-group {
-            display: flex;
             gap: 8px;
         }
 
-        .btn-social {
-            border: none;
-            padding: 8px 12px;
-            border-radius: 6px;
-            color: white;
-            font-size: 13px;
-            display: flex;
-            align-items: center;
-            gap: 5px;
-            cursor: pointer;
-            transition: 0.2s;
-        }
-
-        .btn-google {
-            background: #db4437;
-        }
-
-        .btn-fb {
-            background: #4267B2;
-        }
-
-        .btn-x {
-            background: #000;
-        }
-
-        .btn-social:hover {
-            opacity: 0.8;
-            transform: translateY(-1px);
+        .btn-login:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
         }
 
         .btn-logout {
-            background: #fee;
-            color: #d32f2f;
-            width: 30px;
-            height: 30px;
+            background: #fff5f5;
+            color: #e53e3e;
+            width: 34px;
+            height: 34px;
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
             font-weight: bold;
+            font-size: 18px;
+            transition: 0.2s;
         }
 
-        /* --- COMPOSER --- */
+        .btn-logout:hover {
+            background: #ffe3e3;
+            transform: scale(1.1);
+        }
+
+        /* --- COMPOSER (Post Input) --- */
         .composer {
-            background: white;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-            margin-bottom: 25px;
+            background: var(--card-bg);
+            padding: 25px;
+            border-radius: var(--radius-main);
+            box-shadow: var(--shadow-md);
+            margin-bottom: 30px;
+            position: relative;
         }
 
         .composer textarea {
             width: 100%;
-            border: none;
+            border: 2px solid #f0f2f5;
             resize: vertical;
-            min-height: 80px;
-            font-family: inherit;
+            min-height: 100px;
+            padding: 15px;
+            border-radius: 12px;
             font-size: 16px;
-            outline: none;
-            color: #333;
+            background: #fafafa;
+            transition: 0.2s;
+        }
+
+        .composer textarea:focus {
+            background: white;
+            border-color: var(--primary-color);
         }
 
         .composer-footer {
             display: flex;
             justify-content: flex-end;
-            margin-top: 10px;
-            border-top: 1px solid #f0f0f0;
-            padding-top: 10px;
+            margin-top: 15px;
         }
 
         .btn-post {
-            background: var(--primary-color);
+            background: var(--primary-gradient);
             color: white;
-            padding: 8px 24px;
-            border-radius: 6px;
-            font-weight: bold;
+            padding: 10px 30px;
+            border-radius: 50px;
+            font-weight: 700;
+            font-size: 15px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        .btn-post:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 18px rgba(0, 0, 0, 0.2);
         }
 
         .btn-post:disabled {
             background: #ccc;
             cursor: not-allowed;
+            transform: none;
+            box-shadow: none;
         }
 
         /* --- POST LIST --- */
         .post-card {
-            background: white;
-            padding: 20px;
-            border-radius: 12px;
-            margin-bottom: 15px;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
-            animation: fadeIn 0.3s ease;
+            background: var(--card-bg);
+            padding: 25px;
+            border-radius: var(--radius-main);
+            margin-bottom: 20px;
+            box-shadow: var(--shadow-sm);
+            transition: transform 0.2s;
+            border: 1px solid #f0f2f5;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .post-card:hover {
+            transform: translateY(-3px);
+            box-shadow: var(--shadow-md);
+        }
+
+        .post-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 4px;
+            height: 100%;
+            background: var(--primary-color);
+            opacity: 0;
+            transition: 0.3s;
+        }
+
+        .post-card:hover::before {
+            opacity: 1;
         }
 
         @keyframes fadeIn {
             from {
                 opacity: 0;
-                transform: translateY(10px);
+                transform: translateY(20px);
             }
 
             to {
@@ -265,10 +306,39 @@
             }
         }
 
+
+
         .post-header {
             display: flex;
             justify-content: space-between;
             margin-bottom: 12px;
+        }
+
+        /* --- FOOTER --- */
+        .app-footer {
+            text-align: center;
+            margin-top: 40px;
+            padding-top: 20px;
+            border-top: 1px solid rgba(0, 0, 0, 0.05);
+            color: var(--text-muted);
+            font-size: 13px;
+        }
+
+        .app-footer span {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        .credit-heart {
+            color: #e53e3e;
+            display: inline-block;
+            animation: beat 1s infinite alternate;
+        }
+
+        @keyframes beat {
+            to {
+                transform: scale(1.2);
+            }
         }
 
         .post-author-info {
@@ -606,11 +676,7 @@
                      <button id="btn-logout" class="btn-logout" title="خروج">×</button>
                 </div>
             ` : `
-                <div class="login-group">
-                    <button id="btn-login-google" class="btn-social btn-google">Google</button>
-                    <button id="btn-login-fb" class="btn-social btn-fb">Facebook</button>
-                    <button id="btn-login-x" class="btn-social btn-x">X</button>
-                </div>
+                <button id="btn-login-google" class="btn-login">تسجيل دخول Google</button>
             `}
         </div>
 
@@ -624,12 +690,16 @@
         <div id="feed-container">
             <div style="text-align:center;color:#888;">جاري التحميل...</div>
         </div>
+        
+        <footer class="app-footer">
+            <span>&copy; ${new Date().getFullYear()} مجتمع الأبطال - جميع الحقوق محفوظة</span>
+            <span>تطوير و تصميم: <a href="https://www.absi.ly" target="_blank" style="text-decoration:none; color:inherit;"><strong>عبدالسلام شليبك</strong></a> <span class="credit-heart">❤</span></span>
+        </footer>
     `;
 
             // Events
             if (document.getElementById('btn-login-google')) document.getElementById('btn-login-google').onclick = () => signInWithPopup(auth, googleProvider);
-            if (document.getElementById('btn-login-fb')) document.getElementById('btn-login-fb').onclick = () => signInWithPopup(auth, facebookProvider).catch(e => alert("تنبيه: يجب تفعيل فيسبوك من إعدادات Firebase أولاً.\n" + e.message));
-            if (document.getElementById('btn-login-x')) document.getElementById('btn-login-x').onclick = () => signInWithPopup(auth, twitterProvider).catch(e => alert("تنبيه: يجب تفعيل X من إعدادات Firebase أولاً.\n" + e.message));
+
 
             if (document.getElementById('btn-logout')) document.getElementById('btn-logout').onclick = () => signOut(auth);
             if (document.getElementById('btn-post')) document.getElementById('btn-post').onclick = submitPost;
